@@ -22,9 +22,5 @@
 			access items in those menus
 
 
-	Possibly make it so that you can create ICQ-style 'aliases' for
-		buddies on your buddy list.  This won't be too hard it'll
-		just take a bit of work.  Maybe we'll save this one for the
-		release after our next release.
 	Maybe someday in the future gaim will be able to support multiple
 		connections, so you can log on as 2+ names at once. Maybe.
